# Chorgly

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml  docker.yml  integration.yml
claude/: questions.md
claude/context/: issue3_status.yaml  issue4_status.yaml  issue5_status.yaml  prototype.yaml  seen_remote_main_head.yaml  session.yaml
claude/design/: chorgly.md
docs/: app.js  index.html
src/backend/: Cargo.toml
src/backend/src/: main.rs  session.rs  state.rs
src/core/src/: chore.rs  db.rs  lib.rs  proto.rs  user.rs
src/frontend/src/: lib.rs  state.rs
tests/: gen_testdata.py  test_auth.py
tools/admin/: Cargo.toml
tools/admin/src/: main.rs
