[workspace]
resolver = "2"
members = [
  "src/core",
  "src/backend",
  "src/frontend",
  "tools/admin",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
sha2 = "0.10"
hex = "0.4"
